--- a/examples/ui-router-example/app/components/admin/admin.html
+++ b/examples/ui-router-example/app/components/admin/admin.html
@@ -33,5 +33,5 @@ Welcome {{member.name}}, The product store currently has {{storeCount -1}} items
 </form>
 
 <ul>
-	<li ng-repeat="product in products">Price: {{product.price}}, Product: {{product.name}}, Quantity: {{product.quantity}} <button ng-click="editProduct(product)">Edit</button></li>
+	<li ng-repeat="product in products track by product.id">Price: {{product.price}}, Product: {{product.name}}, Quantity: {{product.quantity}} <button ng-click="editProduct(product)">Edit</button></li>
 </ul>
